--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ python:
 
 before_install:
 - git clone https://github.com/qcoumes/docker-wims-minimal.git wims
-- docker build -t wims-minimal wims/ &> /dev/null
+- docker build -t wims-minimal wims/
 - docker run -itd -p 7777:80 --name wims wims-minimal
 - docker container start wims
 - docker exec -it wims ./bin/apache-config
