--- a/.travis.yml
+++ b/.travis.yml
@@ -5,31 +5,29 @@ sudo: required
 language: python
 
 services:
-- docker
+  - docker
 
 python:
-- '3.5'
-- '3.6'
-- '3.7'
+  - '3.5'
+  - '3.6'
+  - '3.7'
 
 before_install:
-- git clone https://github.com/qcoumes/docker-wims-minimal.git wims
-- docker build -t wims-minimal wims/
-- docker run -itd -p 7777:80 --name wims wims-minimal
-- docker container start wims
-- docker exec -it wims ./bin/apache-config
-- docker exec -it wims service apache2 restart
+  - git clone https://github.com/qcoumes/docker-wims-minimal.git wims
+  - docker build -t wims-minimal wims/
+  - docker run -itd -p 7777:80 --name wims wims-minimal
+  - docker container start wims
+  - docker exec -it wims ./bin/apache-config
+  - docker exec -it wims service apache2 restart
 
 install:
-- pip install -U wheel setuptools
-- pip install tox-travis
-- pip install coveralls
+  - pip install -U wheel setuptools
+  - pip install tox-travis
+  - pip install codecov
 
-script:
-- tox
+script: tox
 
-after_success:
-- coveralls
+after_success: codecov
 
 deploy:
   provider: pypi
