--- a/tox.ini
+++ b/tox.ini
@@ -1,31 +1,28 @@
 [tox]
-distshare={homedir}/.tox/distshare
-envlist=py{35,36,37}
-skip_missing_interpreters=true
-indexserver=
+distshare = {homedir}/.tox/distshare
+envlist = py{35,36,37}
+skip_missing_interpreters = true
+indexserver =
     pypi = https://pypi.python.org/simple
 
 [testenv]
 passenv = TRAVIS TRAVIS_*
 setenv = PYTHONPATH = {toxinidir}
-commands=
+commands =
     py.test --pep8 -m pep8
     coverage run --source wimsapi -m pytest -sv tests
     coverage report -m
-    coveralls
 deps =
     py
     pytest
     pytest-pep8
     coverage
     pytest-cov
-    coveralls
-    python-coveralls
 
 [pytest]
 addopts = -vvl
 exclude = tests/*
-pep8maxlinelength=100
+pep8maxlinelength = 100
 pep8ignore =
     wimsapi/__init__.py W391
     wimsapi/*.py W293 W503 E401 E303 W391 E128 E127 E203
