Install dependecies in tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ passenv = TRAVIS TRAVIS_*
 setenv =
     PYTHONPATH = {toxinidir}
 commands =
+    pip install -e .
     py.test --pep8 -m pep8
     coverage run --source wimsapi -m pytest -sv tests
     coverage report -m
