Now use setup.cfg to ask coverage to not cover 'if not status:'

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,9 @@ exclude_lines =
     pragma: no cover
     def __repr__
     def __str__
-    pass
+    def __hash__
+    if not status:
+    \spass\s
 
 [coverage:run]
 branch = True
