Now use Github Action isteand of Travis

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ commands =
     pip install -e .
     py.test --pep8 -m pep8
     coverage run --source wimsapi -m pytest -sv tests
-    coverage report -m
+    coverage xml
 deps =
     py
     pytest
