--- a/setup.cfg
+++ b/setup.cfg
@@ -56,7 +56,7 @@ deps =
 
 [tool:pytest]
 addopts = -vvl
-exclude = tests/*
+ignore = tests/*
 pep8maxlinelength = 100
 pep8ignore =
     * W293 E303 W503 E203 E241 E221
