Use pycodestyle instead of pytest pep8 extension

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,20 +43,25 @@ setenv =
     PYTHONPATH = {toxinidir}
 commands =
     pip install -e .
-    py.test --pep8 -m pep8
+    pycodestyle wimsapi/
     coverage run --source wimsapi -m pytest -sv tests
     coverage xml
 deps =
-    py
     pytest
-    pytest-pep8
     coverage
     pytest-cov
+    pycodestyle
+
+####################################
+##### PEP 8 & PEP 257 settings #####
+####################################
+[pycodestyle]
+count = True
+# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
+ignore = E303,W293,E241,W503,E701,E741
+max-line-length = 100
+max-doc-length = 100
 
 
 [tool:pytest]
 addopts = -vvl
-ignore = tests/*
-pep8maxlinelength = 100
-pep8ignore =
-    * W293 E303 W503 E203 E241 E221
